--- a/index.html
+++ b/index.html
@@ -50,21 +50,21 @@
     <div class="characters" id="char">
         <h1 class="char">C<span>h</span>ara<span>c</span>ters</h1>
         <div class="col">
-            <div class="wrap1">
+            <div class="wrap1 ani">
                 <div class="healer">
                     <img src="./assets/imgs/healer.png" width="400px">
                 </div>
                 <h1 class="heading">Healer</h1>
                 <p class="cardes">She can use the ability <br> "Restoration" to restore the health or of herself or allied creatures.</p>
             </div>
-            <div class="wrap2">
+            <div class="wrap2 ani">
                 <div class="hunter">
                     <img src="./assets/imgs/hunter.png" width="400px">
                 </div>
                 <h1 class="heading">Hunter</h1>
                 <p class="cardes">He can place a "Trap" on the battlefield that deals damage to enemy creatures when they enter play or attack the Hunter.</p>
             </div>
-            <div class="wrap3">
+            <div class="wrap3 ani">
                 <div class="shadow">
                     <img src="./assets/imgs/shadow.png" width="400px">
                 </div>
@@ -73,21 +73,21 @@
             </div>
         </div>
         <div class="col-2">
-            <div class="wrap4">
+            <div class="wrap4 ani">
                 <div class="pirate">
                     <img src="./assets/imgs/pirate.png" width="400px">
                 </div>
                 <h1 class="heading">Pirate</h1>
                 <p class="cardes">He has the ability to "Steal", which <br> allows him to steal a card from the <br> opponent's deck or hand."</p>
             </div>
-            <div class="wrap5">
+            <div class="wrap5 ani">
                 <div class="arrow">
                     <img src="./assets/imgs/arrow.png" width="400px">
                 </div>
                 <h1 class="heading">Arrow</h1>
                 <p class="cardes">She can use "Slow Arrow", which <br> slows down the movement of her <br> opponents and weakens their <br> attacks.</p>
             </div>
-            <div class="wrap6">
+            <div class="wrap6 ani">
                 <div class="ghost">
                     <img src="./assets/imgs/ghost.png" width="400px">
                 </div>
@@ -100,36 +100,36 @@
     <div class="history" id="hist">
         <h1 class="hist">Hi<span>s</span>tor<span>y</span></h1>
         <div class="sec1">
-            <div class="pat1">
+            <div class="pat1 ani">
                 <img src="./assets/imgs/history/section.png">
             </div>
-            <div class="pat1-2">
+            <div class="pat1-2 ani">
                 <img src="./assets/imgs/history/section2.png">
             </div>
         </div>
 
         <div class="sec2">
-            <div class="pat2">
+            <div class="pat2 ani">
                 <img src="./assets/imgs/history/section3.png">
             </div>
-            <div class="pat2-1">
+            <div class="pat2-1 ani">
                 <img src="./assets/imgs/history/section4.png">
             </div>
         </div>
         <div class="sec3">
-            <div class="pat3">
+            <div class="pat3 ani">
                 <img src="./assets/imgs/history/section5.png">
             </div>
-            <div class="pat3-1">
+            <div class="pat3-1 ani">
                 <img src="./assets/imgs/history/section6.png">
             </div>
         </div>
 
         <div class="sec4">
-            <div class="pat4">
+            <div class="pat4 ani">
                 <img src="./assets/imgs/history/section7.png">
             </div>
-            <div class="pat4-1">
+            <div class="pat4-1 ani">
                 <img src="./assets/imgs/history/section8.png">
             </div>
         </div>
@@ -138,7 +138,7 @@
     <div class="cards">
         <h1 class="cardss" id="cards">Ca<span>r</span>ds</h1>
         <div class="frags">
-            <div class="frag1">
+            <div class="frag1 ani">
                 <div class="cardpat1">
                     <img src="./assets/imgs/cards/char1.png" width="400px">
                 </div>
@@ -152,7 +152,7 @@
                     <img src="./assets/imgs/cards/char4.png" width="400px">
                 </div>
             </div>
-            <div class="frag2">
+            <div class="frag2 ani">
                 <div class="cardpat5">
                     <img src="./assets/imgs/cards/char5.png" width="400px">
                 </div>
@@ -166,7 +166,7 @@
                     <img src="./assets/imgs/cards/char8.png" width="400px">
                 </div>
             </div>
-            <div class="frag3">
+            <div class="frag3 ani">
                 <div class="cardpat9">
                     <img src="./assets/imgs/cards/char9.png" width="400px">
                 </div>
@@ -180,7 +180,7 @@
                     <img src="./assets/imgs/cards/char12.png" width="400px">
                 </div>
             </div>
-            <div class="frag4">
+            <div class="frag4 ani">
                 <div class="cardpat13">
                     <img src="./assets/imgs/cards/char13.png" width="400px">
                 </div>
@@ -194,7 +194,7 @@
                     <img src="./assets/imgs/cards/char16.png" width="400px">
                 </div>
             </div>
-            <div class="frag5">
+            <div class="frag5 ani">
                 <div class="cardpat17">
                     <img src="./assets/imgs/cards/char17.png" width="400px">
                 </div>
@@ -208,7 +208,7 @@
                     <img src="./assets/imgs/cards/char20.png" width="400px">
                 </div>
             </div>
-            <div class="frag6">
+            <div class="frag6 ani">
                 <div class="cardpat21">
                     <img src="./assets/imgs/cards/char21.png" width="400px">
                 </div>
@@ -251,6 +251,8 @@
             <i class="fa-brands fa-discord"></i>
         </div>
     </div>
+
+    <script src="./assets/js/main.js"></script>
 </body>
 
 </html>
